chore: add path alias

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,7 +43,11 @@
 
     "import/resolver": {
       "typescript": true,
-      "node": true
+      "node": true,
+      "alias": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx", ".d.ts"],
+        "map": [["@", "./src"]]
+      }
     }
   }
 }
