--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "prettier": "3.2.5",
     "standard-version": "9.5.0",
     "tsup": "8.0.2"
+  },
+  "dependencies": {
+    "commander": "12.0.0"
   }
 }
