chore: change name

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "lowfy",
-  "version": "1.0.0",
+  "name": "lowfi",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "type": "module",
   "bin": {
-    "lowfy": "dist/bin/lowfy.cjs"
+    "lowfi": "dist/bin/lowfi.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
