--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "release:major": "npm run release -- --release-as major",
     "release:minor": "npm run release -- --release-as minor",
     "release:patch": "npm run release -- --release-as patch",
-    "build": "tsup",
-    "dev": "tsup --watch"
+    "build": "tsup-node",
+    "dev": "tsup-node --watch"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +28,8 @@
     "@commitlint/cli": "19.3.0",
     "@commitlint/config-conventional": "19.2.2",
     "@tsconfig/node16": "16.1.3",
+    "@types/fluent-ffmpeg": "2.1.24",
+    "@types/inquirer": "9.0.7",
     "@types/node": "20.12.12",
     "@typescript-eslint/eslint-plugin": "7.9.0",
     "@typescript-eslint/parser": "7.9.0",
@@ -50,6 +52,12 @@
     "tsup": "8.0.2"
   },
   "dependencies": {
-    "commander": "12.0.0"
+    "commander": "12.0.0",
+    "fluent-ffmpeg": "2.1.2",
+    "fluent-ffmpeg-7": "2.1.5",
+    "inquirer": "9.2.21",
+    "ora": "8.0.1",
+    "speaker": "0.5.5",
+    "ytdl-core": "4.11.5"
   }
 }
