--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "fluent-ffmpeg": "2.1.2",
     "fluent-ffmpeg-7": "2.1.5",
     "inquirer": "9.2.21",
+    "open": "10.1.0",
     "ora": "8.0.1",
     "speaker": "0.5.5",
     "ytdl-core": "4.11.5"
