chore: update package.json

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "bin": {
     "lowfi": "dist/bin/lowfi.js"
   },
+  "files": [
+    "dist/bin/lowfi.js"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext .js,.ts",
