--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "@commitlint/cli": "19.3.0",
     "@commitlint/config-conventional": "19.2.2",
     "@tsconfig/node16": "16.1.3",
+    "@types/figlet": "1.5.8",
     "@types/fluent-ffmpeg": "2.1.24",
+    "@types/gradient-string": "1.1.6",
     "@types/inquirer": "9.0.7",
     "@types/node": "20.12.12",
     "@typescript-eslint/eslint-plugin": "7.9.0",
@@ -68,8 +70,10 @@
   },
   "dependencies": {
     "commander": "12.0.0",
+    "figlet": "1.7.0",
     "fluent-ffmpeg": "2.1.2",
     "fluent-ffmpeg-7": "2.1.5",
+    "gradient-string": "2.0.2",
     "inquirer": "9.2.21",
     "open": "10.1.0",
     "ora": "8.0.1",
