fix: change streaming package

--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "inquirer": "9.2.21",
     "open": "10.1.0",
     "ora": "8.0.1",
-    "speaker": "0.5.5",
-    "ytdl-core": "4.11.5"
+    "play-dl": "1.9.7",
+    "speaker": "0.5.5"
   }
 }
