--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "tsup": "8.0.2"
   },
   "dependencies": {
+    "chalk": "5.3.0",
     "commander": "12.0.0",
     "figlet": "1.7.0",
     "fluent-ffmpeg": "2.1.2",
