feat: fecth custom url information

--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "open": "10.1.0",
     "ora": "8.0.1",
     "play-dl": "1.9.7",
-    "speaker": "0.5.5"
+    "speaker": "0.5.5",
+    "ytdl-core": "4.11.5"
   }
 }
