--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "fluent-ffmpeg-7": "2.1.5",
     "gradient-string": "2.0.2",
     "inquirer": "9.2.21",
+    "log-symbols": "6.0.0",
     "open": "10.1.0",
     "ora": "8.0.1",
     "play-dl": "1.9.7",
