--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,7 +38,9 @@
     "node/no-unpublished-import": "off",
     "node/no-missing-import": "off",
     "node/shebang": "off",
-    "no-constant-condition": "off"
+    "no-constant-condition": "off",
+    "no-async-promise-executor": "off",
+    "node/no-unsupported-features/es-syntax": "off"
   },
 
   "settings": {
