--- a/package.json
+++ b/package.json
@@ -71,19 +71,16 @@
   },
   "dependencies": {
     "chalk": "5.3.0",
-    "cheerio": "1.1.0",
     "commander": "12.0.0",
     "figlet": "1.7.0",
     "fluent-ffmpeg": "2.1.3",
     "gradient-string": "2.0.2",
     "inquirer": "9.2.21",
     "log-symbols": "6.0.0",
-    "m3u8stream": "0.8.6",
-    "node-fetch": "3.3.2",
     "open": "10.1.0",
     "ora": "8.0.1",
     "pcm-volume": "1.0.0",
-    "speaker": "0.5.5",
-    "ytdl-core": "4.11.5"
+    "play-dl": "1.9.7",
+    "speaker": "0.5.5"
   }
 }
